--- a/styles/global.css
+++ b/styles/global.css
@@ -40,18 +40,29 @@ a:hover{
   color: var(--brand-color-light);
 }
 
+img{
+  max-width: 100%;
+}
+
 .container{
   max-width: 1280px;
   padding-inline: 32px;
   margin-inline: auto;
 }
 
-/* utility class */
-
-.grid{
-  display: grid;
+main{
+  margin-top: 40px;
 }
 
-.grid-flow-col{
-  grid-auto-flow: column;
+.content-tag{
+  display: inline-block;
+  background-color: var(--brand-color-dark);
+  padding: 4px 8px;
+
+  border-radius: 4px;
+  font: 500 10px/1.2 var(--font-family);
+  color: var(--text-color-primary);
+  text-transform: uppercase;
+  letter-spacing: 0.04em;
+  box-shadow: 0px 4px 16px 0px #02061740;
 }
